<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hintText">Search...</string>
    <string name="reset">Reset</string>
    <string name="filter">Filter</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="size">Size</string>
    <string-array name="sizes_array">
        <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra-large</item>
    </string-array>
    <string name="color">Color</string>
    <string-array name="colors_array">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string name="type">Type</string>
    <string-array name="types_array">
        <item></item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string name="site">Site</string>
    <string name="site_example">www.example.com</string>

</resources>
